# cv-inference-triton

./: .gitignore  Dockerfile  README.md  claude.md  requirements.txt
backends/preprocess_cpp/: CMakeLists.txt  decode_jpeg.h  preprocess.cpp  preprocess_classifier.cpp
benchmarks/: load_test.py
benchmarks/01_onnx_vs_trt/: benchmark.sh  benchmark_latency.sh  notes.md  run_pipeline.sh
benchmarks/02_cpp_backend/: benchmark.sh  notes.md  run_pipeline.sh
benchmarks/03_dynamic_batching/: benchmark.sh  notes.md
benchmarks/04_geoclassifier/: benchmark.sh  notes.md  run_pipeline.sh
clients/: infer.py  infer_classifier.py  infer_pipeline.py
model_repository/geoclassifier/: config.pbtxt
model_repository/geoclassifier_pipeline/: config.pbtxt
model_repository/geoclassifier_postprocess/: config.pbtxt
model_repository/geoclassifier_postprocess/1/: model.py
model_repository/geoclassifier_preprocess_cpp/: config.pbtxt
model_repository/geoclassifier_trt/: config.pbtxt
model_repository/geoclassifier_trt_pipeline/: config.pbtxt
model_repository/postprocess/: config.pbtxt
model_repository/postprocess/1/: model.py
model_repository/preprocess/: config.pbtxt
model_repository/preprocess_cpp/: config.pbtxt
model_repository/yolov8s/: config.pbtxt
model_repository/yolov8s_dynamic/: config.pbtxt
model_repository/yolov8s_pipeline/: config.pbtxt
model_repository/yolov8s_trt/: config.pbtxt
model_repository/yolov8s_trt_pipeline/: config.pbtxt
model_repository/yolov8s_trt_pipeline_cpp/: config.pbtxt
scripts/: benchmark_throughput.sh  run_triton.sh
(+1 files in other folders)
